include/irafhy/utility/parser/grammar/antlr4-runtime-cpp/definitionParser.cpp

// Generated from /home/jianqiang/CLionProjects/irafhy/src/utility/parser/grammar/definition.g4 by ANTLR 4.7.2


#include "definitionListener.h"
#include "definitionVisitor.h"

#include "definitionParser.h"


using namespace antlrcpp;
using namespace antlr4;

definitionParser::definitionParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

definitionParser::~definitionParser() {
  delete _interpreter;
}

std::string definitionParser::getGrammarFileName() const {
  return "definition.g4";
}

const std::vector<std::string>& definitionParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& definitionParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ConditionContext ------------------------------------------------------------------

definitionParser::ConditionContext::ConditionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* definitionParser::ConditionContext::KEY_CONDITION() {
  return getToken(definitionParser::KEY_CONDITION, 0);
}

tree::TerminalNode* definitionParser::ConditionContext::LEFTCURLYBRACKET() {
  return getToken(definitionParser::LEFTCURLYBRACKET, 0);
}

tree::TerminalNode* definitionParser::ConditionContext::RIGHTCURLYBRACKET() {
  return getToken(definitionParser::RIGHTCURLYBRACKET, 0);
}

definitionParser::IntervalhullContext* definitionParser::ConditionContext::intervalhull() {
  return getRuleContext<definitionParser::IntervalhullContext>(0);
}

definitionParser::PolytopeContext* definitionParser::ConditionContext::polytope() {
  return getRuleContext<definitionParser::PolytopeContext>(0);
}


size_t definitionParser::ConditionContext::getRuleIndex() const {
  return definitionParser::RuleCondition;
}

void definitionParser::ConditionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<definitionListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCondition(this);
}

void definitionParser::ConditionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<definitionListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCondition(this);
}


antlrcpp::Any definitionParser::ConditionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<definitionVisitor*>(visitor))
    return parserVisitor->visitCondition(this);
  else
    return visitor->visitChildren(this);
}

definitionParser::ConditionContext* definitionParser::condition() {
  ConditionContext *_localctx = _tracker.createInstance<ConditionContext>(_ctx, getState());
  enterRule(_localctx, 0, definitionParser::RuleCondition);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(28);
    match(definitionParser::KEY_CONDITION);
    setState(29);
    match(definitionParser::LEFTCURLYBRACKET);
    setState(32);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case definitionParser::KEY_INTERVAL_HULL: {
        setState(30);
        intervalhull();
        break;
      }

      case definitionParser::KEY_POLYTOPE: {
        setState(31);
        polytope();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
    setState(34);
    match(definitionParser::RIGHTCURLYBRACKET);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PolytopeContext ------------------------------------------------------------------

definitionParser::PolytopeContext::PolytopeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* definitionParser::PolytopeContext::KEY_POLYTOPE() {
  return getToken(definitionParser::KEY_POLYTOPE, 0);
}

definitionParser::HpolytopeContext* definitionParser::PolytopeContext::hpolytope() {
  return getRuleContext<definitionParser::HpolytopeContext>(0);
}

definitionParser::VpolytopeContext* definitionParser::PolytopeContext::vpolytope() {
  return getRuleContext<definitionParser::VpolytopeContext>(0);
}


size_t definitionParser::PolytopeContext::getRuleIndex() const {
  return definitionParser::RulePolytope;
}

void definitionParser::PolytopeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<definitionListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPolytope(this);
}

void definitionParser::PolytopeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<definitionListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPolytope(this);
}


antlrcpp::Any definitionParser::PolytopeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<definitionVisitor*>(visitor))
    return parserVisitor->visitPolytope(this);
  else
    return visitor->visitChildren(this);
}

definitionParser::PolytopeContext* definitionParser::polytope() {
  PolytopeContext *_localctx = _tracker.createInstance<PolytopeContext>(_ctx, getState());
  enterRule(_localctx, 2, definitionParser::RulePolytope);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(36);
    match(definitionParser::KEY_POLYTOPE);
    setState(39);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
    case 1: {
      setState(37);
      hpolytope();
      break;
    }

    case 2: {
      setState(38);
      vpolytope();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- HpolytopeContext ------------------------------------------------------------------

definitionParser::HpolytopeContext::HpolytopeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* definitionParser::HpolytopeContext::LEFTCURLYBRACKET() {
  return getToken(definitionParser::LEFTCURLYBRACKET, 0);
}

definitionParser::MatrixContext* definitionParser::HpolytopeContext::matrix() {
  return getRuleContext<definitionParser::MatrixContext>(0);
}

definitionParser::VectorContext* definitionParser::HpolytopeContext::vector() {
  return getRuleContext<definitionParser::VectorContext>(0);
}

tree::TerminalNode* definitionParser::HpolytopeContext::RIGHTCURLYBRACKET() {
  return getToken(definitionParser::RIGHTCURLYBRACKET, 0);
}


size_t definitionParser::HpolytopeContext::getRuleIndex() const {
  return definitionParser::RuleHpolytope;
}

void definitionParser::HpolytopeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<definitionListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterHpolytope(this);
}

void definitionParser::HpolytopeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<definitionListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitHpolytope(this);
}


antlrcpp::Any definitionParser::HpolytopeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<definitionVisitor*>(visitor))
    return parserVisitor->visitHpolytope(this);
  else
    return visitor->visitChildren(this);
}

definitionParser::HpolytopeContext* definitionParser::hpolytope() {
  HpolytopeContext *_localctx = _tracker.createInstance<HpolytopeContext>(_ctx, getState());
  enterRule(_localctx, 4, definitionParser::RuleHpolytope);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(41);
    match(definitionParser::LEFTCURLYBRACKET);
    setState(42);
    matrix();
    setState(43);
    vector();
    setState(44);
    match(definitionParser::RIGHTCURLYBRACKET);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VpolytopeContext ------------------------------------------------------------------

definitionParser::VpolytopeContext::VpolytopeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* definitionParser::VpolytopeContext::LEFTCURLYBRACKET() {
  return getToken(definitionParser::LEFTCURLYBRACKET, 0);
}

std::vector<definitionParser::VectorContext *> definitionParser::VpolytopeContext::vector() {
  return getRuleContexts<definitionParser::VectorContext>();
}

definitionParser::VectorContext* definitionParser::VpolytopeContext::vector(size_t i) {
  return getRuleContext<definitionParser::VectorContext>(i);
}

tree::TerminalNode* definitionParser::VpolytopeContext::RIGHTCURLYBRACKET() {
  return getToken(definitionParser::RIGHTCURLYBRACKET, 0);
}

std::vector<tree::TerminalNode *> definitionParser::VpolytopeContext::COMMA() {
  return getTokens(definitionParser::COMMA);
}

tree::TerminalNode* definitionParser::VpolytopeContext::COMMA(size_t i) {
  return getToken(definitionParser::COMMA, i);
}


size_t definitionParser::VpolytopeContext::getRuleIndex() const {
  return definitionParser::RuleVpolytope;
}

void definitionParser::VpolytopeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<definitionListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVpolytope(this);
}

void definitionParser::VpolytopeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<definitionListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVpolytope(this);
}


antlrcpp::Any definitionParser::VpolytopeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<definitionVisitor*>(visitor))
    return parserVisitor->visitVpolytope(this);
  else
    return visitor->visitChildren(this);
}

definitionParser::VpolytopeContext* definitionParser::vpolytope() {
  VpolytopeContext *_localctx = _tracker.createInstance<VpolytopeContext>(_ctx, getState());
  enterRule(_localctx, 6, definitionParser::RuleVpolytope);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(46);
    match(definitionParser::LEFTCURLYBRACKET);
    setState(47);
    vector();
    setState(52); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(49);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == definitionParser::COMMA) {
        setState(48);
        match(definitionParser::COMMA);
      }
      setState(51);
      vector();
      setState(54); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == definitionParser::LEFTROUNDBRACKET

    || _la == definitionParser::COMMA);
    setState(56);
    match(definitionParser::RIGHTCURLYBRACKET);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- MatrixContext ------------------------------------------------------------------

definitionParser::MatrixContext::MatrixContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* definitionParser::MatrixContext::KEY_MATRIX() {
  return getToken(definitionParser::KEY_MATRIX, 0);
}

tree::TerminalNode* definitionParser::MatrixContext::LEFTCURLYBRACKET() {
  return getToken(definitionParser::LEFTCURLYBRACKET, 0);
}

std::vector<definitionParser::VectorContext *> definitionParser::MatrixContext::vector() {
  return getRuleContexts<definitionParser::VectorContext>();
}

definitionParser::VectorContext* definitionParser::MatrixContext::vector(size_t i) {
  return getRuleContext<definitionParser::VectorContext>(i);
}

tree::TerminalNode* definitionParser::MatrixContext::RIGHTCURLYBRACKET() {
  return getToken(definitionParser::RIGHTCURLYBRACKET, 0);
}

tree::TerminalNode* definitionParser::MatrixContext::KEY_ROW_MAJOR_ORDER() {
  return getToken(definitionParser::KEY_ROW_MAJOR_ORDER, 0);
}

tree::TerminalNode* definitionParser::MatrixContext::KEY_COL_MAJOR_ORDER() {
  return getToken(definitionParser::KEY_COL_MAJOR_ORDER, 0);
}

std::vector<tree::TerminalNode *> definitionParser::MatrixContext::COMMA() {
  return getTokens(definitionParser::COMMA);
}

tree::TerminalNode* definitionParser::MatrixContext::COMMA(size_t i) {
  return getToken(definitionParser::COMMA, i);
}


size_t definitionParser::MatrixContext::getRuleIndex() const {
  return definitionParser::RuleMatrix;
}

void definitionParser::MatrixContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<definitionListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterMatrix(this);
}

void definitionParser::MatrixContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<definitionListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitMatrix(this);
}


antlrcpp::Any definitionParser::MatrixContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<definitionVisitor*>(visitor))
    return parserVisitor->visitMatrix(this);
  else
    return visitor->visitChildren(this);
}

definitionParser::MatrixContext* definitionParser::matrix() {
  MatrixContext *_localctx = _tracker.createInstance<MatrixContext>(_ctx, getState());
  enterRule(_localctx, 8, definitionParser::RuleMatrix);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(58);
    match(definitionParser::KEY_MATRIX);
    setState(59);
    match(definitionParser::LEFTCURLYBRACKET);
    setState(60);
    dynamic_cast<MatrixContext *>(_localctx)->MAJOR_ORDER = _input->LT(1);
    _la = _input->LA(1);
    if (!(_la == definitionParser::KEY_ROW_MAJOR_ORDER

    || _la == definitionParser::KEY_COL_MAJOR_ORDER)) {
      dynamic_cast<MatrixContext *>(_localctx)->MAJOR_ORDER = _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
    setState(61);
    vector();
    setState(68);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == definitionParser::LEFTROUNDBRACKET

    || _la == definitionParser::COMMA) {
      setState(63);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == definitionParser::COMMA) {
        setState(62);
        match(definitionParser::COMMA);
      }
      setState(65);
      vector();
      setState(70);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(71);
    match(definitionParser::RIGHTCURLYBRACKET);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VectorContext ------------------------------------------------------------------

definitionParser::VectorContext::VectorContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* definitionParser::VectorContext::LEFTROUNDBRACKET() {
  return getToken(definitionParser::LEFTROUNDBRACKET, 0);
}

std::vector<definitionParser::Const_expressionContext *> definitionParser::VectorContext::const_expression() {
  return getRuleContexts<definitionParser::Const_expressionContext>();
}

definitionParser::Const_expressionContext* definitionParser::VectorContext::const_expression(size_t i) {
  return getRuleContext<definitionParser::Const_expressionContext>(i);
}

tree::TerminalNode* definitionParser::VectorContext::RIGHTROUNDBRACKET() {
  return getToken(definitionParser::RIGHTROUNDBRACKET, 0);
}

std::vector<tree::TerminalNode *> definitionParser::VectorContext::COMMA() {
  return getTokens(definitionParser::COMMA);
}

tree::TerminalNode* definitionParser::VectorContext::COMMA(size_t i) {
  return getToken(definitionParser::COMMA, i);
}


size_t definitionParser::VectorContext::getRuleIndex() const {
  return definitionParser::RuleVector;
}

void definitionParser::VectorContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<definitionListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVector(this);
}

void definitionParser::VectorContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<definitionListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVector(this);
}


antlrcpp::Any definitionParser::VectorContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<definitionVisitor*>(visitor))
    return parserVisitor->visitVector(this);
  else
    return visitor->visitChildren(this);
}

definitionParser::VectorContext* definitionParser::vector() {
  VectorContext *_localctx = _tracker.createInstance<VectorContext>(_ctx, getState());
  enterRule(_localctx, 10, definitionParser::RuleVector);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(73);
    match(definitionParser::LEFTROUNDBRACKET);
    setState(74);
    const_expression(0);
    setState(79);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == definitionParser::COMMA) {
      setState(75);
      match(definitionParser::COMMA);
      setState(76);
      const_expression(0);
      setState(81);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(82);
    match(definitionParser::RIGHTROUNDBRACKET);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IntervalhullContext ------------------------------------------------------------------

definitionParser::IntervalhullContext::IntervalhullContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* definitionParser::IntervalhullContext::KEY_INTERVAL_HULL() {
  return getToken(definitionParser::KEY_INTERVAL_HULL, 0);
}

tree::TerminalNode* definitionParser::IntervalhullContext::LEFTCURLYBRACKET() {
  return getToken(definitionParser::LEFTCURLYBRACKET, 0);
}

std::vector<definitionParser::IntervalContext *> definitionParser::IntervalhullContext::interval() {
  return getRuleContexts<definitionParser::IntervalContext>();
}

definitionParser::IntervalContext* definitionParser::IntervalhullContext::interval(size_t i) {
  return getRuleContext<definitionParser::IntervalContext>(i);
}

tree::TerminalNode* definitionParser::IntervalhullContext::RIGHTCURLYBRACKET() {
  return getToken(definitionParser::RIGHTCURLYBRACKET, 0);
}

std::vector<tree::TerminalNode *> definitionParser::IntervalhullContext::COMMA() {
  return getTokens(definitionParser::COMMA);
}

tree::TerminalNode* definitionParser::IntervalhullContext::COMMA(size_t i) {
  return getToken(definitionParser::COMMA, i);
}


size_t definitionParser::IntervalhullContext::getRuleIndex() const {
  return definitionParser::RuleIntervalhull;
}

void definitionParser::IntervalhullContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<definitionListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterIntervalhull(this);
}

void definitionParser::IntervalhullContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<definitionListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitIntervalhull(this);
}


antlrcpp::Any definitionParser::IntervalhullContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<definitionVisitor*>(visitor))
    return parserVisitor->visitIntervalhull(this);
  else
    return visitor->visitChildren(this);
}

definitionParser::IntervalhullContext* definitionParser::intervalhull() {
  IntervalhullContext *_localctx = _tracker.createInstance<IntervalhullContext>(_ctx, getState());
  enterRule(_localctx, 12, definitionParser::RuleIntervalhull);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(84);
    match(definitionParser::KEY_INTERVAL_HULL);
    setState(85);
    match(definitionParser::LEFTCURLYBRACKET);
    setState(86);
    interval();
    setState(93);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == definitionParser::LEFTSQUAREBRACKET

    || _la == definitionParser::COMMA) {
      setState(88);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == definitionParser::COMMA) {
        setState(87);
        match(definitionParser::COMMA);
      }
      setState(90);
      interval();
      setState(95);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(96);
    match(definitionParser::RIGHTCURLYBRACKET);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ConstraintsContext ------------------------------------------------------------------

definitionParser::ConstraintsContext::ConstraintsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}
